# hybrid_approaches_in_grl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt  test.py
docs/: mkdocs.yaml
docs/source/: index.md
src/: __init__.py
src/config/: base.yaml
src/config/dataset/: CiteSeer-class.yaml  Cora-class.yaml  Cora-link.yaml  Flickr-class.yaml  Flickr-link.yaml  PubMed-class.yaml  PubMed-link.yaml  Twitch-link.yaml  ogbl-collab.yaml  ogbn-arxiv.yaml
src/data/: data_utils.py  get_data.py
src/experiments/: CLASS.py  LINK.py  run_model.py
src/models/: Node2Vec.py  get_laplacian.py  logger.py  metrics.py  model_utils.py  shallow.py
src/models/LinkPrediction/: GNN_link.py  mlp_link.py  run_combined_link.py
src/models/LinkPrediction/combined/: combined_latents.py  combined_link_utils.py  logits_integration.py
src/models/NodeClassification/: GNN_train.py  GNN_unsupervised.py  MLP_train.py  models.py  run_combined_class.py
src/models/NodeClassification/combined/: combined_class_utils.py  combined_latents.py  logits_integration.py
